sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:3: error: not found: value egtNombreValeurs
  var l = egtNombreValeurs()
          ^