sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var l = egtNombreValeurs()
  while(l>1){
    l = (l.asInstanceOf[Double] / 2).asInstanceOf[Int]
  }
}